# google-sheets-mcp

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
google_sheets_mcp/: app.py  auth.py  config.py  logging_config.py  server.py
