[project]
name = "google-sheets-mcp"
version = "0.2.0"
description = "Supersheets — pandas-powered Google Sheets MCP server for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "gspread>=6.0.0",
    "google-auth>=2.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
]

[project.scripts]
google-sheets-mcp = "google_sheets_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
