[project]
name = "google-sheets-mcp"
version = "0.3.0"
description = "Supersheets — pandas-powered Google Sheets MCP server with Google OAuth for Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0,<1.26.0",
    "gspread>=6.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
google-sheets-mcp = "google_sheets_mcp.server:main"
google-sheets-mcp-hosted = "google_sheets_mcp.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
